Refactor text of button to clear and the third button to greet

--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -1,5 +1,7 @@
 Button:
-    text: 'three'
+    text: 'Clear'
+Button:
+    text: 'Greet'
 Label:
     text: 'Enter your name'
     color: (1, 1, 0, 1)
