--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -1,7 +1,13 @@
-Button:
-    text: 'Clear'
-Button:
-    text: 'Greet'
-Label:
-    text: 'Enter your name'
-    color: (1, 1, 0, 1)
+<GreetBoxLayout>:
+    orientation: 'vertical'
+
+    Button:
+        text: 'Clear'
+    Button:
+        text: 'Button 2'
+    Button:
+        text: 'Greet'
+        on_press: app.handle_greet()
+    Label:
+        text: 'Enter your name'
+        color: (1, 1, 0, 1)
