--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -4,7 +4,7 @@
     Button:
         text: 'Clear'
     Button:
-        text: 'Button 2'
+        text: 'Button'
     Button:
         text: 'Greet'
         on_press: app.handle_greet()
