Refactor add boxlayout and button

--- a/prac_08/box_layout.kv
+++ b/prac_08/box_layout.kv
@@ -1,10 +1,10 @@
-<GreetBoxLayout>:
+BoxLayout:
     orientation: 'vertical'
 
     Button:
         text: 'Clear'
     Button:
-        text: 'Button'
+        text: 'two'
     Button:
         text: 'Greet'
         on_press: app.handle_greet()
